--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         />
         <meta name="theme-color" content="#000000" />
         <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-        <title>Solid + Capacitor App</title>
+        <link rel="icon" type="image/ico" href="/src/assets/favicon.ico" />
+        <title>Codeword</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
