--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
-        <meta name="theme-color" content="#000000" />
-        <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-        <link rel="icon" type="image/ico" href="/src/assets/favicon.ico" />
-        <title>Codeword</title>
+        <meta name="author" content="Thomas Gerrits" />
+        <meta name="keywords" content="Escape room, Online tool, City escape">
+        <meta name="description" content="A simple tool. Input a text, then try your luck at a screen. Edit the word/screen combinations with the !SETTINGS! command.">
+        <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+        <link rel="icon" type="image/ico" href="/favicon.ico" />
+        <title>Guess the Codeword</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
