gitignore update, extra meta tags, added site icon

--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
         />
+
         <meta name="author" content="Thomas Gerrits" />
-        <meta name="keywords" content="Escape room, Online tool, City escape">
-        <meta name="description" content="A simple tool. Input a text, then try your luck at a screen. Edit the word/screen combinations with the !SETTINGS! command.">
+        <meta name="keywords" content="Escape room, Online tool, City escape" />
+        <meta
+            name="description"
+            content="A simple tool. Input a text, then try your luck at a screen. Edit the word/screen combinations with the !SETTINGS! command."
+        />
+
+        <meta property="og:title" content="Guess the Codeword" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.guess-codeword.com/" />
+        <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+        <meta
+            property="og:description"
+            content="A simple tool. Input a text, then try your luck at a screen. Edit the word/screen combinations with the !SETTINGS! command."
+        />
+        <meta property="og:site_name" content="Guess the Codeword" />
+        <meta property="fb:app_id" content="eba41c6a-cec5-4522-b9e5-e1cf128fea46" />
+
         <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
         <link rel="icon" type="image/ico" href="/favicon.ico" />
         <title>Guess the Codeword</title>
